sass/login/page.module.sass
/* 
 * Copyright 2019-2023 (c) Nove Group
 * GitHub: https://github.com/nove-org/
 * Inter font is property of their respective owners.
 */

@use '../brand' as *

section.login
    padding: 0
    min-height: calc( 100vh - 7.2rem )
    height: max-content
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    padding: 0 20px
    & div.box
        display: flex
        flex-direction: column
        align-items: center
        justify-content: center
        max-width: calc( 450px - 20px * 2 )
        width: 100%
        padding: 25px 20px
        border-radius: $radius
        border: 1px solid $border
        background: $secondary
        & h1
            font-size: 40px
            background: $textBackground
            background-clip: text
            -webkit-background-clip: text
            -webkit-text-fill-color: transparent
            font-weight: 700
            margin-bottom: 5px
            text-align: center
        & p
            font-size: 20px
            color: $font2
            font-weight: 300
            margin-bottom: 20px
            max-width: 500px
            text-align: center
        & form
            display: grid
            width: calc( 100% - 40px )
            & button
                outline: 0
                border: 1px solid $font
                background: $font
                color: $primary
                padding: 12px 16px
                border-radius: $radius
                width: fit-content
                font-weight: 600
                margin-bottom: 10px
                font-size: 14px
                transition-duration: .15s
                &:hover
                    background: $tertiary
                    border: 1px solid $border
                    color: $font
                    cursor: pointer
                    box-shadow: 0 0 25px 0 rgba(75, 72, 72, 0.3)
                &:active
                    box-shadow: 0 0 25px 0 rgba(75, 72, 72, 0.1)
            & label
                border: 1px solid $border
                padding: 12px
                background: $secondary
                cursor: text
                display: flex
                align-items: center
                border-radius: $radius
                margin-bottom: 15px
                box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15)
                &:hover
                    border: 1px solid $border2
                & input
                    width: 100%
                    border: 0
                    outline: 0
                    background: 0
                    color: $font
                    font-size: 16px
                    margin-top: 1px
                & svg
                    min-width: 20px
                    margin-right: 8px
                    color: $font2
        & div.center
            height: 62px
            display: flex
            flex-direction: column
            align-items: center
            justify-content: center
        & form.tfa
            display: flex
            flex-direction: row
            align-items: center
            & input
                padding: 10px
                background: $secondary
                border-radius: $radius
                border: 1px solid $border
                font-size: 24px
                width: 100%
                min-height: 40px
                text-align: center
                outline: 0
                color: $font2
                &:focus
                    border: 1px solid $border2
                &:not(:last-child)
                    margin-right: 10px

